--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -4,7 +4,7 @@
 .secondary_pages_content
   .blog_left.gallery
     %h1
-      = link_to @article.title, article_path(@article)
+      = @article.title
     %p.subtitle
       = l(@article.publication_date, :format => :long)
     %p
