underline removed from testimonials

--- a/app/assets/stylesheets/css/color_wine.css.scss
+++ b/app/assets/stylesheets/css/color_wine.css.scss
@@ -33,3 +33,6 @@ margin-top: 10px;
 .textwidget#sign_in a:hover{
   text-decoration: underline;
 }
+.services_we_offer h5, h6{
+  text-decoration: none;
+}
