--- a/app/assets/stylesheets/css/typo.css.scss
+++ b/app/assets/stylesheets/css/typo.css.scss
@@ -132,7 +132,7 @@ h1, h2, .testimonials h6.testimonial_name, .project_title, label, .blog_left h1 
  color: #191919;
  }
  
-h5, h6, .third_menu li a:hover, .follow_us, .project_title:hover, 
+ .third_menu li a:hover, .follow_us, .project_title:hover, 
 .secondary_menu li span, .sec_menu_selected_middle, .related_projects:hover, 
 .read_more:hover, .newer_articles:hover, .older_articles:hover, .input_middle, 
 .input_middle_blog, textarea, .blog_left a:hover, .blog_left h1 a:hover, .add_a_comment, 
