--- a/app/assets/stylesheets/css/color_wine.css.scss
+++ b/app/assets/stylesheets/css/color_wine.css.scss
@@ -1,5 +1,5 @@
 .latest_project{
- background: url(image-path('home_bg.jpg')) repeat-x;
+ background: url(image-path('home_bg2.jpg')) repeat;
  }
  
 .secondary_page_bg{
