--- a/app/assets/stylesheets/css/color_wine.css.scss
+++ b/app/assets/stylesheets/css/color_wine.css.scss
@@ -3,11 +3,7 @@
  }
  
 .secondary_page_bg{
- background: url(image-path('secondary_page_bg.jpg')) repeat-x;
- }
- 
-.category_illustration{
- background: url(image-path('category_illustration_bg.jpg')) no-repeat;
+  background: url(image-path('home_bg2.jpg')) repeat;
  }
 
 nav.pagination a:hover{
